rust/kcl-lib/tests/comparisons_multiple/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing comparisons_multiple.kcl
---
KCL Semantic error

  × semantic: Expected a number, but found a boolean (`true` or `false`)
   ╭────
 1 │ assert(3 == 3 == 3, error = "this should not compile")
   ·        ───┬──
   ·           ╰── tests/comparisons_multiple/input.kcl
   ╰────
